--- a/index.html
+++ b/index.html
@@ -54,6 +54,58 @@
 
     <hr class="horizontal-line"/>
 
+    <!-- controls-->
+    <div class="range">
+        <div class="slider-value">
+            <span id="slider-volume-value">50</span>
+        </div>
+        <div class="field">
+            <div class="value left">0</div>
+            <input id="slider-volume-input" type="range" min="0" max="99" value="50" steps="0">
+            <div class="value right">100</div>
+        </div>
+    </div>
+
+
+<!--    <div class="range">
+        <div class="slider-value">
+            <span id="slider-value-volume" class="slider-value-span">.5</span>
+        </div>
+
+        <div class="field">
+            <div class="value left">0</div>
+            <input id="control-volume" class="field-input-slider" type="range" min="10" max="90" value="50" steps="10">
+            <div class="value right">90</div>
+        </div>
+    </div>
+
+
+    <div class="range">
+        <div class="slider-value">
+            <span class="slider-value-span">5</span>
+        </div>
+
+        <div class="field">
+            <div class="value left">0</div>
+            <input id="control-pitch" class="field-input-slider" type="range" min="0" max="10" value="5" steps="1">
+            <div class="value right">10</div>
+        </div>
+    </div>
+
+    <div class="range">
+        <div class="slider-value">
+            <span class="slider-value-span">5</span>
+        </div>
+
+        <div class="field">
+            <div class="value left">0</div>
+            <input id="control-rate" class="field-input-slider" type="range" min="0" max="10" value="5" steps="1">
+            <div class="value right">10</div>
+        </div>
+    </div>-->
+
+
+
 
 </form>
 
