--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./gifs/preloader.gif" alt="hardware-drive image" id="preloader-gif"/>
 </div>
 <!-- begin of translator-->
-<form id="form" class="wrapper">
+<form onsubmit="return false;" id="form" class="wrapper">
 
     <div class="title">
         <h3>Text-To-Speech App</h3>
@@ -34,7 +34,7 @@
     </label>
 
     <div class="wrapper-buttons">
-        <button type="submit" id="submit-button" class="button">speak</button>
+        <button type="button" id="submit-button" class="button">speak</button>
         <button type="reset" id="clear-button" class="button button-clear">clear</button>
     </div>
 
@@ -44,7 +44,7 @@
     <div class="control-wrapper">
         <div class="slider-wrapper">
             <img src="./img/volume.png" class="slider-icon" alt="volume icon">
-            <input id="slider-volume" class="slider-input" type="range" min="0" step="0.1" max="1" value="0.9" />
+            <input id="slider-volume" class="slider-input" type="range" min="0" step="0.1" max="2" value="0.9" />
             <span id="slider-volume-value" class="slider-value">0.9</span>
         </div>
 
@@ -56,7 +56,7 @@
 
         <div class="slider-wrapper">
             <img src="./img/rate.png" class="slider-icon" alt="speed icon">
-            <input id="slider-rate" class="slider-input" type="range" min="0.1" step="0.1" max="10" value="0.8" />
+            <input id="slider-rate" class="slider-input" type="range" min="0.1" step="0.1" max="2" value="0.8" />
             <span id="slider-rate-value" class="slider-value">0.8</span>
         </div>
     </div>
